# Go-Getta

./: .env  Cargo.toml  README.md  diesel.toml
migrations/2025-03-23-172427_create_account_keys/: down.sql  up.sql
migrations/2025-03-23-181055_create_users/: up.sql
migrations/2025-03-23-184835_create_sessions/: up.sql
migrations/2025-03-28-152518_create_posts/: up.sql
migrations/2025-03-28-153246_create_rooms/: up.sql
migrations/2025-04-04-165514_add_ratings/: up.sql
migrations/2025-04-13-131914_add_post_child_column/: down.sql  up.sql
migrations/2025-04-20-203606_add_memberships/: down.sql  up.sql
migrations/2025-04-29-110718_create_bans/: down.sql  up.sql
migrations/2025-05-07-124938_create_bookmarks/: down.sql  up.sql
migrations/2025-05-12-203037_create_follows/: up.sql
migrations/2025-05-13-113327_add_user_follow_count/: down.sql  up.sql
migrations/2025-05-14-212335_create_notifications/: up.sql
migrations/2025-05-18-201723_create_notification_timeouts/: down.sql  up.sql
migrations/2025-06-07-101734_add_post_nsfw_flag/: down.sql  up.sql
pages/: gui.html  login.html
public/: comment.js  createPost.js  createRepost.js  createRoom.js  displayPost.js  displayRoom.js  error.js  followedFeed.js  gui.html  gui.js  login.css  login.html  login.js  mobile.css  modal.js  personalProfile.js  profile.js  profilePosts.js  publicSpace.js  screen.js  search.js  style.css  userData.js
src/: admin.rs  api.rs  create_account.rs  db.rs  error.rs  lib.rs  login.rs  main.rs  models.rs  pages.rs  render.rs  schema.rs
src/api/: bookmark.rs  file_upload.rs  (+9 more)
(+2 files in other folders)
