[package]
name = "go_getta"
version = "0.1.0"
edition = "2021"

[dependencies]
bcrypt = "0.17.0"
diesel = { version = "2.2.8", features = ["sqlite", "returning_clauses_for_sqlite_3_35"]}
diesel_migrations = { version = "2.2.0", features = ["sqlite"]}
dotenvy = "0.15.7"
tokio = { version = "1.44.0", features = ["full"]}
uuid = { version = "1.15.1", features = ["v4"]}
warp = "0.3.7"
